--- a/index.html
+++ b/index.html
@@ -777,20 +777,20 @@
                 data-filter-item
                 data-category="Aritificial Intelligence"
               >
-                <a href="https://www.coursera.org/account/accomplishments/records/E22WM433K3SH" target="_blank">
+                <a href="https://www.coursera.org/account/accomplishments/records/89ZQ74MRBFZV" target="_blank">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
 
                     <img
-                      src="./assets/images/Chatgpt advanced data analysis certificate.jpeg"
+                      src="./assets/images/prompt engineering.jpeg"
                       alt="finance"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">CHATGPT Advanced Data Analysis</h3>
+                  <h3 class="project-title">Advanced Prompt Engineering</h3>
 
                   <p class="project-category">Aritificial Intelligence</p>
                 </a>
@@ -801,22 +801,22 @@
                 data-filter-item
                 data-category="UI UX"
               >
-                <a href="https://www.coursera.org/account/accomplishments/records/M4R7HMBSZPA2" target="_blank">
+                <a href="https://www.coursera.org/account/accomplishments/verify/7LRUFN54SSQC" target="_blank">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
 
                     <img
-                      src="./assets/images/Google UX certificate.jpeg"
+                      src="./assets/images/intro to llm.jpeg"
                       alt="finance"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Google UX Design</h3>
+                  <h3 class="project-title">Intro to LLM</h3>
 
-                  <p class="project-category">UI UX</p>
+                  <p class="project-category">Artificial Intelligence</p>
                 </a>
               </li>
 
@@ -825,242 +825,24 @@
                 data-filter-item
                 data-category="Artificial Intelligence"
               >
-                <a href="https://www.coursera.org/account/accomplishments/records/PTUGMS736HJY" target="_blank">
+                <a href="https://www.coursera.org/account/accomplishments/records/AYGBYVEM95FF" target="_blank">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
 
                     <img
-                      src="./assets/images/learn to code with AI certificate.jpeg"
+                      src="./assets/images/bits and bytes.jpeg"
                       alt="orizon"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Code with AI</h3>
+                  <h3 class="project-title">Google Bits and Bytes of Netwroking</h3>
 
-                  <p class="project-category">Artificial Intelligence</p>
+                  <p class="project-category">Computer Networking</p>
                 </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="machine learning"
-              >
-                <a href="https://www.coursera.org/account/accomplishments/records/Y3C8XRKJLRVE" target="_blank">
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-
-                    <img
-                      src="./assets/images/NLP AI certificate.jpeg"
-                      alt="fundo"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">NLP AI</h3>
-
-                  <p class="project-category">Artificial Intelligence</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="Networking"
-              >
-                <a href="https://www.coursera.org/account/accomplishments/records/4VVKXK3UBR4U" target="_blank">
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-
-                    <img
-                      src="./assets/images/Google computer networking certificate.jpeg"
-                      alt="summary"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">Google Networking</h3>
-
-                  <p class="project-category">Networking</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="Artificial Intelligence"
-              >
-                <a href="https://www.coursera.org/account/accomplishments/records/SM7V7RXXMJ9Q" target="_blank">
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-
-                    <img
-                      src="./assets/images/ai with llm certificate.jpeg"
-                      alt="summary"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">AI Apps with LLM</h3>
-
-                  <p class="project-category">Articial Intelligence</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="Aritificial Intelligence"
-              >
-                <a href="https://www.coursera.org/account/accomplishments/records/3HRD379NQM8W" target="_blank">
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-
-                    <img
-                      src="./assets/images/gen AI for everyone certificate.jpeg"
-                      alt="finance"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">Generative AI</h3>
-
-                  <p class="project-category">Aritificial Intelligence</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="UI UX"
-              >
-                <a href="https://www.coursera.org/account/accomplishments/records/VFQB5WY9SB9A" target="_blank">
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-
-                    <img
-                      src="./assets/images/gen AI primer certificate.jpeg"
-                      alt="finance"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">Generative AI Primer</h3>
-
-                  <p class="project-category">Artificial Intelligence</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="Artificial Intelligence"
-              >
-                <a href="https://www.coursera.org/account/accomplishments/records/F4Q6D6K32ZEN" target="_blank">
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-
-                    <img
-                      src="./assets/images/intro to llm certificate.jpeg"
-                      alt="orizon"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">Introduction to LLM</h3>
-
-                  <p class="project-category">Artificial Intelligence</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="machine learning"
-              >
-                <a href="https://www.coursera.org/account/accomplishments/records/DQLMEB3NC8WE" target="_blank">
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-
-                    <img
-                      src="./assets/images/Google Gen AI certificate.jpeg"
-                      alt="fundo"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">Google Generative AI</h3>
-
-                  <p class="project-category">Artificial Intelligence</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="Networking"
-              >
-                <a href="https://www.coursera.org/account/accomplishments/records/WE8QVG28PBCX" target="_blank">
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-
-                    <img
-                      src="./assets/images/trustworthy gen AI certificate.jpeg"
-                      alt="summary"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">Trustworthy Generative AI</h3>
-
-                  <p class="project-category">Artificial Intellingence</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="Artificial Intelligence"
-              >
-                <a href="https://www.coursera.org/account/accomplishments/records/ASNCNYDXUZTQ" target="_blank">
-                  <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-
-                    <img
-                      src="./assets/images/prompt engineering certificate.jpeg"
-                      alt="summary"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">Prompt Engineering</h3>
-
-                  <p class="project-category">Articial Intelligence</p>
-                </a>
-              </li>
-
-    
+              </li>  
               
             </ul>
           </section>
